# OrtaVM

./: .gitignore  CMakeLists.txt  IDEAS  Makefile  README.md  RELEASE.md  TODO  build.cmd  build.orta  build.samba  build.sh  build.x  deovm.c  docs.c  example.x  for.ovm  hallo  libx.c  orta.c  orta.h  oto64.c  std.nyva  std.orta  std.x  test.orta  vector.h  vm.c  vm.old.c
examples/: fib.orta  file.orta  file.ovm  for.orta  for.x  functions.orta  funny_example.orta  hello_world.x  if.x  lt_gt.orta  lt_gt.ovm  math.orta  math.ovm  mem.x  os.orta  password_game.orta  password_game.ovm  stack.orta  stack.ovm  terminal.orta  terminal.ovm  variables.x
helpers/: runtime.asm  runtime.c
src/: asm.h  config.h  fcfx.c  libx.asm  nyva.c  orta.c  orta.h  repl.c  rom.zig  std.h  wrapper.c  xbd.c  xd.c  xlib.h  xtoa.c
src/libs/: allocator.h  loadfn.h  sb.h  str.h  vector.h  xhex.h
std/: inet.horta  lib.horta  net.horta
tools/: build.cmd  build.sh
utils/: orta.lua
v1/: build.samba  docs.c  output.asm  test.orta  test.ovm
v1/examples/: for.orta  password_game.orta
v1/helpers/: runtime.asm  runtime.c
v1/src/: deovm.c  fcfo.c  orta.c  orta.h  oto64.c
v1/std/: lib.horta
v1/tools/: build.cmd  build.sh
